--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-build</artifactId>
-	<!--<version>${revision}</version>-->
-	<version>2.0.1.RELEASE</version>
+	<version>${revision}</version>
 	<packaging>pom</packaging>
 	<name>Spring Boot Build</name>
 	<description>Spring Boot Build</description>
 	<properties>
-		<!--<revision>2.0.1.RELEASE</revision>-->
-		<version>2.0.1.RELEASE</version>
+		<revision>2.0.1.RELEASE</revision>
+		<!--<version>2.0.1.RELEASE</version>-->
 		<main.basedir>${basedir}</main.basedir>
 	</properties>
 	<!-- Most elements are in profiles so they are stripped out during maven-flatten -->
