--- a/spring-boot-project/spring-boot-dependencies/pom.xml
+++ b/spring-boot-project/spring-boot-dependencies/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-build</artifactId>
-		<!--<version>${revision}</version>-->
-		<version>2.0.1.RELEASE</version>
+		<version>${revision}</version>
+		<!--<version>2.0.1.RELEASE</version>-->
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>spring-boot-dependencies</artifactId>
