--- a/spring-boot-samples/pom.xml
+++ b/spring-boot-samples/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<!--<version>${revision}</version>-->
-		<version>2.0.1.RELEASE</version>
+		<version>${revision}</version>
+		<!--<version>2.0.1.RELEASE</version>-->
 		<relativePath>../spring-boot-project/spring-boot-starters/spring-boot-starter-parent</relativePath>
 	</parent>
 	<artifactId>spring-boot-samples</artifactId>
@@ -123,7 +123,7 @@
 						</execution>
 					</executions>
 				</plugin>
-				<plugin>
+				<!--<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
 					<version>1.0.0</version>
@@ -171,7 +171,7 @@
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
 					</configuration>
-				</plugin>
+				</plugin>-->
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -202,10 +202,10 @@
 					<excludes>
 						<exclude>**/Abstract*.java</exclude>
 					</excludes>
-					<systemPropertyVariables>
+					<!--<systemPropertyVariables>
 						<java.security.egd>file:/dev/./urandom</java.security.egd>
 						<java.awt.headless>true</java.awt.headless>
-					</systemPropertyVariables>
+					</systemPropertyVariables>-->
 				</configuration>
 			</plugin>
 			<plugin>
